--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Vite App</title>
 
     <style media="(prefers-color-scheme: light)">
-      @import url("./src/styles/colors/light.css");
+      @import url('./src/styles/colors/light.css');
     </style>
     <style media="(prefers-color-scheme: dark)">
-      @import url("./src/styles/colors/dark.css");
+      @import url('./src/styles/colors/dark.css');
     </style>
   </head>
   <body>
